<resources>
    <string name="app_name">InuaDada Faundation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc1">A movement that keeps growing because the world keeps believing in us and our story. A Foundation envisions a global community that empowers, upholds the dignity and protects the rights of every girl child and extends that to her caregivers and community.</string>
    <string name="heading1">Amplify. Accelerate. Act</string>
    <string name="desc2">‘My First Time’ is Inua Dada’s core Menstrual Health Management and Advocacy Program, which uses storytelling to debunk Menstrual Health myths, strengthen awareness on Reproductive Health and Rights.</string>
    <string name="heading2">My First Time</string>
    <string name="desc3">The strength of Inua Dada Foundation is on advocacy through various social media channels and mainstream media, where we bring all our work to life by inviting the public to engage on key social justice issues as well as carrying out campaigns aimed at amplifying Gender Equality discourse.</string>
    <string name="heading3">Media &amp; Advocacy</string>
    <string name="desc4">The 2021 Generation Equality Forum was a major global inflection point for gender equality. This landmark effort brought together governments, corporations and change makers from around the world to define and announce ambitious investments and policies.</string>
    <string name="heading4">Generation Equality Forum</string>
    <string name="header">The Inua Dada Foundation </string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="pass">password</string>
    <string name="don_t_have">don\'t have an account?</string>
    <string name="Register">Register</string>
    <string name="already_registered">already registered?</string>
    <string name="username">username</string>
    <string name="registration">Registration</string>
    <string name="phone">phone</string>
    <string name="singin">SignIn</string>
    <string name="search_here">Search here</string>
    <string name="date">SEPTEMBER 3, 2022</string>
    <string name="head">Inua Dada Foundation Rolls Out Advocacy Programme</string>
    <string name="what_s_new">WHAT\'S NEW?</string>
    <string name="news">Read Our Latest News</string>
    <string name="programs">Programs</string>
    <string name="WhatsNew1">The Inua Dada Centre was launched on October 8th, as a step towards progressing the rights of the community in Korogocho, by provided access to Menstrual Products and Information, Psychosocial Support for survivors of GBV and an upcoming Economic Empowerment Program. We invite stakeholders to walk with us as we seek to uphold the rights and dignity of communities, one girl at a time.</string>
    <string name="WhatsNew2">The Inua Dada Foundation has kicked off a youth advocacy program to amplify their voices and equip them with skills to create positive change. Dubbed the #InuaDadaVoices, the initiative seeks to help the youth learn how to tackle challenges they see in their communities. “As Inua Dada we seek to support their efforts to address their concerns, especially on matters of Gender Based Violence (GBV). Our advocacy comes at a special time. 26 years since The Beijing Declaration and Platform for Action of 1995- the most visionary agenda for the empowerment of women and girls, everywhere,” said Janet Mbugua, the founder of Inua Dada.</string>
    <string name="WhatsNew3">Today, Generation Equality Forum starts in Paris, France. This is a historical women conference, in this decade, after the 1995 Fourth World Conference on Women held in Beijing, China that birthed the Beijing Declaration and the Platform for Action.\n\nThe declaration is a women’s empowerment roadmap outlining 12 strategic areas of focus including ending poverty among women and violence against them; ensuring their inclusion in leadership and decision making, promoting their human rights and safeguarding their rights in the media as well as fostering girl-child development.The France forum, attended by heads of State and government, representatives from international organisations, civil society, the private sector and youth organisations, the leaders and feminists will be reflecting on progress made 26 years later, and conclude with concrete actions going forward.</string>
    <string name="Program1">The 2021 Generation Equality Forum was a major global inflection point for gender equality. This landmark effort brought together governments, corporations and change makers from around the world to define and announce ambitious investments and policies. These diverse stakeholders have embarked on a 5-year journey to accelerate equality, leadership and opportunity for women and girls worldwide. This work will culminate in 2026. (https://forum.generationequality.org)\n\nInua Dada Foundation was selected to amplify the Generation Equality Forum. We formed our youth-lead program to lead in this amplification, called #InuaDadaVoices. This is a Youth Advocates Program that trains young people on advocacy on social justice issues with a focus on Gender Based Violence, Gender Equality Amplification, Policy Dialogues particularly on policies designed to protect women and girls, Male Allyship and Leadership.</string>
    <string name="Program2">For many young girls in Kenya, properly managing a menstrual cycle with adequate sanitary products is a luxury. Roughly one million Kenyan girls miss out on education each month because they are unable to afford menstrual products. Girls and women are unable to work or participate in education for days at a time, placing them at a disadvantage in comparison to their male peers. Some girls even resort to sharing menstrual products in a desperate attempt to find a solution to period poverty in Kenya. Though access to menstrual products is a multi-faceted issue in Kenya, as Inua Dada we are making it possible for girls to properly manage their periods and continue with life as usual.\n\nResearch shows that 65% of Kenyan women and girls are unable to afford basic sanitary pads. As a consequence, girls often rely on the men in their lives for period products and some girls engage in transactional sex in order to secure sanitary products, perpetuating a patriarchal cycle of reliance and exploitation.\n\n‘My First Time’ is Inua Dada’s core Menstrual Health Management and Advocacy Program, which uses storytelling to debunk Menstrual Health myths, strengthen awareness on Reproductive Health and Rights, produce Sanitary Pads in collaboration with the Pad Project and distribute sanitary pads to girls and women in need. Inspired by Inua Dada Founder’s book ‘My First Time’, an advocacy tool for raising awareness and breaking down stigma and taboos around Menstruation and Menstrual Health and keeping policy makers accountable.</string>
    <string name="Program3">The strength of Inua Dada Foundation is on advocacy through various social media channels and mainstream media, where we bring all our work to life by inviting the public to engage on key social justice issues as well as carrying out campaigns aimed at amplifying Gender Equality discourse. We have reached 4 million people in 2021 alone. Our current media and advocacy programs are:\n\n<b>Inua Dada Voices</b>\n\n#InuaDadaVoices: Our Young Advocates Program mentors and trains young people on advocacy on social justice issues with a focus on Gender Based Violence, Gender Equality Amplification, Policy Dialogues particularly on policies designed to protect women and girls, Male Allyship and Leadership.\n\n<b>Ha2tasita</b>\n\n#Ha2tasita: A clarion call led by our youth advocates, declaring action to progress gender equality for the next 26 years, moving forward from this 26th year (2021) since the Beijing Declaration and Platform For Action in 1995.\n\n<b>ReWriteHerStory</b>\n\n#ReWriteHerStory: In collaboration with Plan International and Citizen TV, Inua Dada Foundation captured the stories of young women in various informal settlements in Nairobi, who have gained knowledge and agency to combat GBV, Period Poverty and other social injustices that women and girls face daily in their communities. The series lives on mainstream and digital media.\n\n<b>Tandika Leso</b>\n\n#TandikaLeso: A push for access, agency and advocacy in the fight against menstrual injustice.</string>
    <string name="Program4">The Inua Dada Centers at Korogocho Informal Settlement and in Mombasa currently has the capacity to:\n\n*Convene psychosocial support for survivors of GBV\n\nTrain community on Menstrual Health Management.\n\nTrain women on production of sanitary towels that they can benefit from economically and the pads can be distributed to school going girls for them to attend school (Upcoming Project).\n\nProviding refuge for survivors of GBV.\n\n<b>The following Information packages will be offered at the centers:</b>\n\n1. Teen Pregnancy awareness and support.\n\n2. Teen Pregnancy awareness and support.\n\n3. Gender Based Violence awareness and support.\n\n4. Access to Monthly legal and human rights experts.\n\n5. Access to Monthly community activities.\n\n5. Information on economic empowerment advice.</string>
    <string name="user_name">Inua Dada</string>
    <string name="mail">inuadada@gmail.com</string>
    <string name="aboutUs">A movement that keeps growing because the world keeps believing in us and our story. A Foundation envisions a global community that empowers, upholds the dignity and protects the rights of every girl child and extends that to her caregivers and community.\n\nOur story began on August 26th 2013, with an emotive feature titled “Period of Shame” on Citizen TV, which caught the attention of many people, our founder, Janet Mbugua, included. The feature highlighted the plight of primary school girls in Labos Primary School, Marigat District, Baringo County, Kenya who have no access to sanitary towels and result in using rags and chicken feathers during their monthly period. On 7th November 2013, Inua dada was born, with an official launch with the First Lady of Kenya Her Excellency Margaret Kenyatta as she successfully launched the Inua Dada Sanitary Towel distribution drive at Labos Primary School,where we reached 10,000 girls. This inspired the registration of the Inua Dada Foundation in 2014.\n\n6 years later , Inua dada, has participated in multiple campaigns to end period poverty and reached various milestones, notably:\n\n1. Held the first ever Menstrual Health Management Inclusion Conference in 2020 physically and 2021 virtually.\n\n2. Featured by BBC Africa for convening a virtual Period Party during the onset of the COVID19 pandemic.\n\n3. Launched a book , MFT to tackle the issue of period taboo and period poverty, the first of its kind from East Africa.\n\n4. Named by the Kulcyk Foundation as one of the notable organizations fighting period poverty globally</string>
</resources>